re-order slides

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <title>Incremental Real-time Migration</title>
 
-        <meta name="description" content="A lightning talk about a project at Compare the Market aby ADam Straughan an Equal Experts Associate">
+        <meta name="description" content="A lightning talk about a project at Compare the Market by Adam Straughan an Equal Experts Associate">
         <meta name="author" content="Adam Straughan">
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -94,19 +94,23 @@
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='3-sites-redirect.png'>
+                    <h1>Value!</h1>
                 </section>               
 
                 <section>
-                    <h1>Value!</h1>
-                </section>               
+                    <img style='background-color:#fff;width:100%;height:100%' src='3-sites-intercept.png'>
+                </section>
+
+                <section>
+                    <img style='background-color:#fff;width:100%;height:100%' src='data.png'>
+                </section>
 
                 <section>
                     <img style='background-color:#fff;width:100%;height:100%' src='q-graph.png'>
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='data.png'>
+                    <img style='background-color:#fff;width:100%;height:100%' src='3-sites-redirect.png'>
                 </section>
 
                 <section>
