update last slide

--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
                     <h2>Take Aways</h2>
                     <ul>
                         <li>Aim for incremental</li>
-                        <li>Measure</li>
-                        <li>Evaluate</li>
-                        <li>Do less &amp; get value early</li>
+                        <li>Measure &amp; Evaluate</li>
+                        <li>Get value early</li>
                     </ul>
                 </section>
             </div>
