--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='q-graph.png'>
+                    <img style='background-color:#fff;width:100%;height:100%' src='q-graph-categorise.png'>
                 </section>
 
                 <section>
