Increased font sizes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <img style='background-color:#fff;' src='equalexperts.png'>
                     <img style='background-color:#fff;' src='comparethemarket.png'>
                     <p>
-                        <small>Created by Adam Straughan <a href="http://twitter.com/nearlyadam">@nearlyadam</a></small>
+                        <small>by Adam Straughan</small>
                     </p>
                 </section>
 
@@ -61,19 +61,19 @@
                 </section>
 
                 <section>
-                    <h2>Traditional Approch</h2>
+                    <h1>Traditional Approch</h1>
                     <ul>
-                        <li>2-3 Month Development</li>
-                        <li>No Feedback</li>
-                        <li>Stored Value == Waste</li>
+                        <li><h2>2-3 Month Development</h2></li>
+                        <li><h2>No Feedback</h2></li>
+                        <li><h2>Stored Value</h2></li>
                     </ul>
                 </section>
 
                 <section>
-                    <h2>Iterative Approch</h2>
+                    <h1>Iterative Approch</h1>
                     <ul>
-                        <li>Data driven choices</li>
-                        <li>Get value asap</li>
+                        <li><h2>Data driven choices</h2></li>
+                        <li><h2>Get value asap</h2></li>
                     </ul>
                 </section>
 
@@ -94,7 +94,7 @@
                 </section>
 
                 <section>
-                    <h1>Value!</h1>
+                    <h1 style="font-size:10em">Value!</h1>
                 </section>               
 
                 <section>
@@ -114,11 +114,11 @@
                 </section>
 
                 <section>
-                    <h2>Take Aways</h2>
+                    <h1>Take Aways</h1>
                     <ul>
-                        <li>Aim for incremental</li>
-                        <li>Measure &amp; Evaluate</li>
-                        <li>Get value early</li>
+                        <li><h2>Aim for incremental</h2></li>
+                        <li><h2>Measure &amp; Evaluate</h2></li>
+                        <li><h2>Get value early</h2></li>
                     </ul>
                 </section>
             </div>
