--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
                 <section>
-                    <h1>Incremental Real-time Migration</h1>
+                    <h1>Incremental Real&#8209;time Migration</h1>
                     <h3>Get value sooner</h3>
                     <img style='background-color:#fff;' src='equalexperts.png'>
                     <img style='background-color:#fff;' src='comparethemarket.png'>
@@ -61,7 +61,7 @@
                 </section>
 
                 <section>
-                    <h1>Traditional Approch</h1>
+                    <h1>Traditional Approach</h1>
                     <ul>
                         <li><h2>2-3 Month Development</h2></li>
                         <li><h2>No Feedback</h2></li>
@@ -70,7 +70,7 @@
                 </section>
 
                 <section>
-                    <h1>Iterative Approch</h1>
+                    <h1>Incremental Approach</h1>
                     <ul>
                         <li><h2>Data driven choices</h2></li>
                         <li><h2>Get value asap</h2></li>
