--- a/index.html
+++ b/index.html
@@ -43,9 +43,22 @@
         <i style='position:fixed;left:15px;bottom:15px'>
             <a href="http://twitter.com/nearlyadam">@nearlyadam</a>
         </i>
+        <small id="timer" style='position:fixed;left:15px;top:15px'>
+            00:00
+        </small>
 
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
+                <section>
+                    <h1>Incremental Real&#8209;time Migration</h1>
+                    <h3>Get value sooner</h3>
+                    <img style='background-color:#fff;' src='equalexperts.png'>
+                    <img style='background-color:#fff;' src='comparethemarket.png'>
+                    <p>
+                        <small>by Adam Straughan</small>
+                    </p>
+                </section>
+
                 <section>
                     <h1>Incremental Real&#8209;time Migration</h1>
                     <h3>Get value sooner</h3>
@@ -141,6 +154,38 @@
                 theme: 'moon', // available themes are in /css/theme
                 transition: 'none'
             });
+            var time, displayTime = document.getElementById("timer");
+            function update(){
+                setTimeout(function () {
+                    if (Reveal.isLastSlide()) {
+                        time = 0;
+                    } else {
+                        if (!time && !Reveal.isFirstSlide()) {
+                            displayTime.innerHTML = "00:00";
+                            time = Date.now();
+                        }
+                        if (time) {
+                            displayTime.innerHTML = msToTime(Date.now() - time);
+                        }
+                    }
+                    update();
+                }, 1000);
+                function msToTime(s) {
+                    function addZ(n) {
+                        return (n<10? '0':'') + n;
+                    }
+
+                    var ms = s % 1000;
+                    s = (s - ms) / 1000;
+                    var secs = s % 60;
+                    s = (s - secs) / 60;
+                    var mins = s % 60;
+                    var hrs = (s - mins) / 60;
+
+                    return addZ(mins) + ':' + addZ(secs);
+                }
+            }
+            update();
 
         </script>
 
