--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
+	<head>
+		<meta charset="utf-8">
 
-        <title>Incremental Real-time Migration</title>
+		<title>Incremental Real-time Migration</title>
 
         <meta name="description" content="A lightning talk about a project at Compare the Market by Adam Straughan an Equal Experts Associate">
         <meta name="author" content="Adam Straughan">
 
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <link rel="stylesheet" href="css/reveal.min.css">
-        <link rel="stylesheet" href="css/theme/moon.css" id="theme">
+		<link rel="stylesheet" href="css/reveal.min.css">
+		<link rel="stylesheet" href="css/theme/default.css" id="theme">
 
-        <!-- For syntax highlighting -->
-        <link rel="stylesheet" href="lib/css/zenburn.css">
+		<!-- For syntax highlighting -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-        <!-- If the query includes 'print-pdf', include the PDF print sheet -->
-        <script>
-            if( window.location.search.match( /print-pdf/gi ) ) {
-                var link = document.createElement( 'link' );
-                link.rel = 'stylesheet';
-                link.type = 'text/css';
-                link.href = 'css/print/pdf.css';
-                document.getElementsByTagName( 'head' )[0].appendChild( link );
-            }
-        </script>
-        </style>
+		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
+		<script>
+			if( window.location.search.match( /print-pdf/gi ) ) {
+				var link = document.createElement( 'link' );
+				link.rel = 'stylesheet';
+				link.type = 'text/css';
+				link.href = 'css/print/pdf.css';
+				document.getElementsByTagName( 'head' )[0].appendChild( link );
+			}
+		</script>
+		<style type="text/css">
+		.slide-img {
+			width:80%;height:80%;
+		}
+		</style>
 
-        <!--[if lt IE 9]>
-        <script src="lib/js/html5shiv.js"></script>
-        <![endif]-->
-    </head>
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
+	</head>
 
-    <body>
+	<body>
 
-        <div class="reveal">
-        <i style='position:fixed;left:15px;bottom:15px'>
-            <a href="http://twitter.com/nearlyadam">@nearlyadam</a>
-        </i>
-        <small id="timer" style='position:fixed;left:15px;top:15px'>
-            00:00
-        </small>
-
-            <!-- Any section element inside of this container is displayed as a slide -->
-            <div class="slides">
+		<div class="reveal">
+			<i style='position:fixed;left:15px;bottom:15px'>
+	            <a href="http://twitter.com/nearlyadam">@nearlyadam</a>
+	        </i>
+			<!-- Any section element inside of this container is displayed as a slide -->
+			<div class="slides">
                 <section>
                     <h1>Incremental Real&#8209;time Migration</h1>
                     <h3>Get value sooner</h3>
@@ -60,17 +60,10 @@
                 </section>
 
                 <section>
-                    <h1>Incremental Real&#8209;time Migration</h1>
-                    <h3>Get value sooner</h3>
-                    <img style='background-color:#fff;' src='equalexperts.png'>
-                    <img style='background-color:#fff;' src='comparethemarket.png'>
-                    <p>
-                        <small>by Adam Straughan</small>
-                    </p>
-                </section>
-
-                <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='3-sites.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='3-sites.png'>
+                    <aside class="notes">
+						Old site - complex SQL schema
+					</aside>
                 </section>
 
                 <section>
@@ -91,19 +84,19 @@
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='q-graph.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='q-graph.png'>
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='q-graph-simple.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='q-graph-simple.png'>
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='3-sites-intercept.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='3-sites-intercept.png'>
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='tag-match.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='tag-match.png'>
                 </section>
 
                 <section>
@@ -111,19 +104,19 @@
                 </section>               
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='3-sites-intercept.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='3-sites-intercept.png'>
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='data.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='data.png'>
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='q-graph-categorise.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='q-graph-categorise.png'>
                 </section>
 
                 <section>
-                    <img style='background-color:#fff;width:100%;height:100%' src='3-sites-redirect.png'>
+                    <img class="slide-img" style="background-color:#fff;" src='3-sites-redirect.png'>
                 </section>
 
                 <section>
@@ -136,58 +129,40 @@
                 </section>
             </div>
 
-        </div>
+		</div>
 
-        <script src="lib/js/head.min.js"></script>
-        <script src="js/reveal.min.js"></script>
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.min.js"></script>
 
-        <script>
+		<script>
 
-            // Full list of configuration options available here:
-            // https://github.com/hakimel/reveal.js#configuration
-            Reveal.initialize({
-                controls: true,
-                progress: true,
-                history: true,
-                center: true,
+			// Full list of configuration options available here:
+			// https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: true,
 
-                theme: 'moon', // available themes are in /css/theme
-                transition: 'none'
-            });
-            var time, displayTime = document.getElementById("timer");
-            function update(){
-                setTimeout(function () {
-                    if (Reveal.isLastSlide()) {
-                        time = 0;
-                    } else {
-                        if (!time && !Reveal.isFirstSlide()) {
-                            displayTime.innerHTML = "00:00";
-                            time = Date.now();
-                        }
-                        if (time) {
-                            displayTime.innerHTML = msToTime(Date.now() - time);
-                        }
-                    }
-                    update();
-                }, 1000);
-                function msToTime(s) {
-                    function addZ(n) {
-                        return (n<10? '0':'') + n;
-                    }
+				theme: "moon", // available themes are in /css/theme
+				transition: 'none', // default/cube/page/concave/zoom/linear/fade/none
 
-                    var ms = s % 1000;
-                    s = (s - ms) / 1000;
-                    var secs = s % 60;
-                    s = (s - secs) / 60;
-                    var mins = s % 60;
-                    var hrs = (s - mins) / 60;
+				// Parallax scrolling
+				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
+				// parallaxBackgroundSize: '2100px 900px',
 
-                    return addZ(mins) + ':' + addZ(secs);
-                }
-            }
-            update();
+				// Optional libraries used to extend on reveal.js
+				dependencies: [
+					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+				]
+			});
 
-        </script>
+		</script>
 
-    </body>
+	</body>
 </html>
