added speaker notes

--- a/index.html
+++ b/index.html
@@ -57,12 +57,18 @@
                     <p>
                         <small>by Adam Straughan</small>
                     </p>
+                    <aside class="notes">
+						Name, CtM, Home Comparison website
+					</aside>
                 </section>
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='3-sites.png'>
                     <aside class="notes">
-						Old site - complex SQL schema
+						<ul>
+							<li>Old site - complex SQL schema</li>
+							<li>Customers renewing; are valuable, worth migrating</li>
+						</ul>
 					</aside>
                 </section>
 
@@ -73,6 +79,15 @@
                         <li><h2>No Feedback</h2></li>
                         <li><h2>Stored Value</h2></li>
                     </ul>
+                    <aside class="notes">
+                    Lean perspective;
+						<ul>
+							<li>Waste</li>
+							<li>Work in progress</li>
+							<li>Store value</li>
+							<li>Inventory</li>
+						</ul>
+					</aside>
                 </section>
 
                 <section>
@@ -81,42 +96,111 @@
                         <li><h2>Data driven choices</h2></li>
                         <li><h2>Get value asap</h2></li>
                     </ul>
+                    <aside class="notes">
+						<ul>
+							<li>Agile team</li>
+							<li>Incremental approach</li>
+							<li>Use data to decide what is in each increment we release</li>
+						</ul>
+					</aside>
+
                 </section>
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='q-graph.png'>
+                    <aside class="notes">
+						<ul>
+							<li>Buildings only</li>
+							<li>Employed</li>
+							<li>Joint policy holder</li>
+						</ul>
+					</aside>
                 </section>
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='q-graph-simple.png'>
+                    <aside class="notes">
+						<ul>
+							<li>Simplest thing</li>
+							<li>least effort to migrate</li>
+							<li>least number of questions answered</li>
+						</ul>
+					</aside>
+
                 </section>
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='3-sites-intercept.png'>
+                    <aside class="notes">
+						<ul>
+							<li>Choose an intercept point in the system</li>
+							<li>Silently analyse the data (Comparison)</li>
+						</ul>
+					</aside>
                 </section>
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='tag-match.png'>
+                    <aside class="notes">
+						<ul>
+							<li>Categorisation is <b>really cheap</b> compared to migration</li>
+							<li>Match against what we have implemented</li>
+							<li>Process the data (Migrate in our case)</li>
+							<li>Catch <b>any errors</b> log them and direct on to old system</li>
+						</ul>
+					</aside>
                 </section>
 
                 <section>
                     <h1 style="font-size:10em">Value!</h1>
+                    <aside class="notes">
+						<ul>
+							<li>Migrated in 2-3 weeks</li>
+							<li>No 2-3 months</li>
+							<li>Only one customer on day 1 - simplest (slightly unrealistic journey)</li>
+						</ul>
+					</aside>
                 </section>               
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='3-sites-intercept.png'>
+                    <aside class="notes">
+						<ul>
+							<li>Capturing data</li>
+							<li>The is more value to the team</li>
+						</ul>
+					</aside>
                 </section>
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='data.png'>
+                    <aside class="notes">
+						<ul>
+							<li>Capture data</li>
+							<li>First version not even categorising all the data event that was data driven</li>
+						</ul>
+					</aside>
                 </section>
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='q-graph-categorise.png'>
+                    <aside class="notes">
+						<ul>
+							<li>populatity based on data</li>
+							<li>team knowledge of comlexity and risk</li>
+							<li>Do you want to deal with eye colour stored in Fax field now?</li>
+						</ul>
+					</aside>
                 </section>
 
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='3-sites-redirect.png'>
+                    <aside class="notes">
+						<ul>
+							<li>Itterate</li>
+							<li>We even <b>did not</b> implement everything, left it blank! based on data</li>
+						</ul>
+					</aside>
                 </section>
 
                 <section>
