update main title slide

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
                 <section>
-                    <h1>Incremental Real&#8209;time Migration</h1>
-                    <h3>Get value sooner</h3>
+                    <h1>Get value sooner</h1>
+                    <h3>using data</h3>
                     <img style='background-color:#fff;' src='equalexperts.png'>
                     <img style='background-color:#fff;' src='comparethemarket.png'>
                     <p>
