--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="shortcut icon"  href="avatar.png" />
 
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
@@ -45,6 +46,7 @@
 
 		<div class="reveal">
 			<i style='position:fixed;left:15px;bottom:15px'>
+	            <img src="avatar.png" width="32" height="32" >
 	            <a href="http://twitter.com/nearlyadam">@nearlyadam</a>
 	        </i>
 			<!-- Any section element inside of this container is displayed as a slide -->
