added a few notes

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 <section>
                     <img class="slide-img" style="background-color:#fff;" src='q-graph.png'>
                     <aside class="notes">
+                    	<h3>Weighted Graph - <b>weight</b> is <b>complexity</b> to migrate, number of questions/nodes</h3>
 						<ul>
 							<li>Buildings only</li>
 							<li>Employed</li>
@@ -127,6 +128,12 @@
 							<li>least effort to migrate</li>
 							<li>least number of questions answered</li>
 						</ul>
+						<h3>built 2 things</h3>
+						<ul>
+							<li>Simple categorise system &amp; log it</li>
+							<li>Migrate one type of risk</li>
+						</ul>
+						
 					</aside>
 
                 </section>
@@ -145,10 +152,14 @@
                     <img class="slide-img" style="background-color:#fff;" src='tag-match.png'>
                     <aside class="notes">
 						<ul>
-							<li>Categorisation is <b>really cheap</b> compared to migration</li>
+							<li>Categorisation is <b>really cheap</b> compared to migration <b>and log it</b></li>
 							<li>Match against what we have implemented</li>
 							<li>Process the data (Migrate in our case)</li>
 							<li>Catch <b>any errors</b> log them and direct on to old system</li>
+							<ul>
+								<li>missing fields for old data</li>
+								<li>renamed fields, etc</li>
+							</ul>
 						</ul>
 					</aside>
                 </section>
